--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
+    "google-auth-library": "^10.5.0",
+    "google-spreadsheet": "^5.0.2",
     "next": "16.1.0",
     "nodemailer": "^7.0.12",
     "react": "19.2.3",
